Use jsonnet-bundler to manage dependencies.

--- a/gendash/Makefile
+++ b/gendash/Makefile
@@ -1,10 +1,20 @@
 DASHBOARDS=cluster.json
 
-%.json: %.jsonnet
-	jsonnet -J /Users/ncc/src/github.com/grafana/grafonnet-lib/grafonnet $< -o $@
+jsonnetfile.json:
+	jb init
+
+vendor/grafonnet-lib: jsonnetfile.json
+	jb install github.com/grafana/grafonnet-lib
+
+%.json: %.jsonnet vendor/grafonnet-lib
+	jsonnet -J vendor/grafonnet-lib/grafonnet $< -o $@
 
 ../dashboards.tgz: $(DASHBOARDS)
 	tar zcf ../dashboards.tgz $(DASHBOARDS)
 
 grafana:
 	for i in $(DASHBOARDS); do ../bin/dashToCurl < $$i | curl -i -u admin:admin -H "Content-Type: application/json" -X POST http://grafana.service.dc1.consul:3000/api/dashboards/db -d @- ; done
+
+clean:
+	rm $(DASHBOARDS) ../dashboards.tgz
+	rm -rf vendor/grafonnet-lib jsonnetfile.json
